# perso-2025b-Renatronis

./: CHANGELOG.md  LICENSE  Projeto-Quizz.cabal  README.md
app/: Main.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/packagedb/ghc-9.6.7/: Projeto-Quizz-0.1.0.0-inplace.conf  package.cache
src/: BuscarApi.hi  BuscarApi.hs  LogicaQuiz.hi  LogicaQuiz.hs  Tipos.hi  Tipos.hs  WebApi.hs
static/: estetica.css  index.html  script.js
test/: Spec.hs  testBuscarApi.hs  testLogicaQuiz.hs
