cabal-version:      3.0
name:               Projeto-Quizz
version:            0.1.0.0
synopsis:           Jogo Quizz
license:            BSD-3-Clause
license-file:       LICENSE
author:             Renatronis
maintainer:         renato.marquioro05@gmail.com
category:           Web
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Tipos
                    , BuscarApi
                    , LogicaQuiz
    build-depends:    base >=4.7 && <5
                    , scotty
                    , text
                    , aeson
                    , containers
                    , http-conduit    
                    , bytestring
                    , random
                    , random-shuffle    
    hs-source-dirs:   src
    default-language: Haskell2010

executable Projeto-Quizz
    import:           warnings
    main-is:          Main.hs
    build-depends:    base >=4.7 && <5
                    , Projeto-Quizz
                    , scotty
    hs-source-dirs:   app
    default-language: Haskell2010